--- a/scss/app.scss
+++ b/scss/app.scss
@@ -39,3 +39,46 @@ a {
         margin-left: 2rem;
     }
 }
+
+.login-form {
+    @include tablet {
+        background-color: rgba(0, 0, 0, .75);
+        max-width: 450px;
+        margin: 3rem auto 4rem auto;
+        padding: 2rem 4rem;
+        border-radius: 10px;
+    }
+}
+
+form {
+    legend {
+        color: $white;
+        font-size: 1.8rem;
+        font-weight: bold;
+        margin: 2rem 0;
+    }
+
+    .field {
+        display: flex;
+        margin-bottom: .8rem;
+        position: relative;
+
+
+        span {
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+        }
+
+        label {
+            position: absolute;
+            top: 1.3rem;
+            left: 1rem;
+        }
+
+        input {
+            padding: 1.3rem 1rem .9rem 1rem;
+            flex: 1;
+        }
+    }
+}
