--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,7 +18,6 @@
 
 @mixin button ($color) {
     background-color: $color;
-    padding: .5rem 1rem;
     display: block;
     text-align: center;
     color: $white;
@@ -28,6 +27,11 @@
     border-radius: 5px;
     font-size: .8rem;
     padding: 1rem 0;
+    transition: background-color .3s ease-in-out;
+    &:hover {
+        background-color: darken($color, 10%);
+        cursor: pointer;
+    }
 }
 
 @mixin box-sizing($box-model) {
@@ -36,4 +40,12 @@
 
 @mixin gradient($color1, $color2) {
     background: linear-gradient(to right, $color1 0%, $color2 100%);
+}
+
+@mixin bg-image($image) {
+    background-color: unset;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+    background-image: url(../img/#{$image});
 }
