Building the Footer Section of the Site

--- a/css/app.css
+++ b/css/app.css
@@ -157,3 +157,78 @@ form .actions a,
 form .actions label {
   font-size: .8rem;
 }
+
+.bottom-content {
+  padding-bottom: 2rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .bottom-content {
+    padding-top: 6rem;
+  }
+}
+
+.bottom-content a {
+  font-size: .8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.bottom-content .new-user {
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.bottom-content .new-user span {
+  color: #FFFFFF;
+  margin-left: .5rem;
+}
+
+.site-footer {
+  border-top: 1px solid #8c8c8c;
+  padding: 2rem 0 4rem 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .site-footer {
+    border-top: unset;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 1rem 0 3rem 0;
+  }
+}
+
+.site-footer .container {
+  max-width: 60%;
+}
+
+.site-footer .menu-footer {
+  padding: .5rem 0 3rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+@media only screen and (min-width: 768px) {
+  .site-footer .menu-footer {
+    max-width: 50%;
+  }
+}
+
+.site-footer .menu-footer a {
+  font-size: .8rem;
+}
+
+.site-footer select {
+  background-color: #000000;
+  border-color: #454545;
+  color: #8c8c8c;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 1rem 3rem;
+  font-size: .8rem;
+}
