--- a/scss/app.scss
+++ b/scss/app.scss
@@ -11,6 +11,14 @@ html {
     @include box-sizing(inherit);
 }
 
+.alert {
+    color: #e87c03;
+    display: block;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: .8rem;
+}
+
 body {
     background-color: $black;
     color: $gray2;
