Finishing the Form Validation

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -94,6 +94,11 @@ form {
             left: 1rem;
             font-size: .9rem;
             transition: font-size .2s ease, top .2s ease;
+
+            &.valid {
+                font-size: .6rem;
+                top: .5rem;
+            }
         }
 
         input {
@@ -102,6 +107,8 @@ form {
             background-color: $gray;
             border: none;
             border-radius: 5px;
+            color: $white;
+            font-size: 1.2rem;
 
             &:focus {
                 background-color: $gray3;
